--- a/Project.vcxproj.filters
+++ b/Project.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="SqList.cpp">
       <Filter>资源文件</Filter>
     </ClCompile>
+    <ClCompile Include="test_QuickSort_L.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SqList.h">
