完成特殊链表（有头指针与尾指针以及链表长度）定义、实现、测试

--- a/Project.vcxproj
+++ b/Project.vcxproj
@@ -133,11 +133,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="LinkList.cpp" />
     <ClCompile Include="SqList.cpp" />
-    <ClCompile Include="test_QuickSort_L.cpp" />
-    <ClCompile Include="test_SqLIst.cpp" />
+    <ClCompile Include="test_LInkList.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="LinkList.h" />
     <ClInclude Include="SqList.h" />
   </ItemGroup>
   <ItemGroup>
