--- a/Project.vcxproj.filters
+++ b/Project.vcxproj.filters
@@ -18,15 +18,18 @@
     <ClCompile Include="SqList.cpp">
       <Filter>资源文件</Filter>
     </ClCompile>
-    <ClCompile Include="test_QuickSort_L.cpp">
-      <Filter>源文件</Filter>
+    <ClCompile Include="LinkList.cpp">
+      <Filter>资源文件</Filter>
     </ClCompile>
-    <ClCompile Include="test_SqLIst.cpp">
+    <ClCompile Include="test_LInkList.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SqList.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkList.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
