--- a/Project.vcxproj.filters
+++ b/Project.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="LinkList.cpp">
       <Filter>资源文件</Filter>
     </ClCompile>
-    <ClCompile Include="test_LInkList.cpp">
+    <ClCompile Include="test_LinkList.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
