--- a/Project.vcxproj.filters
+++ b/Project.vcxproj.filters
@@ -21,15 +21,15 @@
     <ClCompile Include="LinkList.cpp">
       <Filter>资源文件</Filter>
     </ClCompile>
-    <ClCompile Include="test_LinkList.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SqList.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="LinkList.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="SqStack.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
