--- a/Project.vcxproj
+++ b/Project.vcxproj
@@ -137,7 +137,7 @@
     <ClCompile Include="SqList.cpp" />
     <ClCompile Include="SqQueue.cpp" />
     <ClCompile Include="SqStack.cpp" />
-    <ClCompile Include="test_SqQueue.cpp" />
+    <ClCompile Include="源.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LinkList.h" />
